Change dependencyid to workflowid in activity table
